docs/version-1.9/modules/en/pages/installation-setup/installation/install-using-fleet.adoc
= Install {longhorn-product-name} Using Fleet
:revdate: 2025-07-24
:page-revdate: {revdate}
:current-version: {page-component-version}

== Prerequisites

[NOTE]
====
{longhorn-product-name} installation requires authenticated access to SUSE Application Collection. For more details, check https://docs.apps.rancher.io/get-started/authentication[authentication guide].
====

* Your workstation: Install https://helm.sh/docs/[Helm] v3.0 or later.
* Kubernetes cluster:
 ** Ensure that each node fulfills the xref:installation-setup/requirements.adoc[installation requirements].
 ** Install https://documentation.suse.com/cloudnative/continuous-delivery/v0.12/en/index.html[{fleet-product-name}] using Helm.
+
[,bash]
----
helm repo add fleet https://rancher.github.io/fleet-helm-charts/
helm -n cattle-fleet-system install --create-namespace --wait fleet-crd fleet/fleet-crd
helm -n cattle-fleet-system install --create-namespace --wait fleet fleet/fleet
----
+
Allow some time for the deployment of Fleet components in the `cattle-fleet-system` namespace.

____
The xref:longhorn-system/system-access/longhorn-cli.adoc[Longhorn Command Line Tool] can be used to check the Longhorn environment for potential issues.
____

== Installation

. In your GitOps repository, create a https://documentation.suse.com/cloudnative/continuous-delivery/v0.12/en/ref-fleet-yaml.html[`fleet.yaml`] file that includes the following:
 ** Parameter for installing {longhorn-product-name} in the `longhorn-system` namespace

+
[,yaml]
----
 defaultNamespace: longhorn-system
----
 ** Parameters for https://documentation.suse.com/cloudnative/continuous-delivery/v0.12/en/bundle-diffs.html[ignoring modified CRDs]

+
[,yaml]
----
 diff:
   comparePatches:
   - apiVersion: apiextensions.k8s.io/v1
     kind: CustomResourceDefinition
     name: engineimages.longhorn.io
     operations:
     - {"op": "replace", "path": "/status"}
   - apiVersion: apiextensions.k8s.io/v1
     kind: CustomResourceDefinition
     name: nodes.longhorn.io
     operations:
     - {"op": "replace", "path": "/status"}
   - apiVersion: apiextensions.k8s.io/v1
     kind: CustomResourceDefinition
     name: volumes.longhorn.io
     operations:
     - {"op": "replace", "path": "/status"}
   - apiVersion: apiextensions.k8s.io/v1
     kind: CustomResourceDefinition
     name: engines.longhorn.io
     operations:
     - {"op": "replace", "path": "/status"}
   - apiVersion: apiextensions.k8s.io/v1
     kind: CustomResourceDefinition
     name: instancemanagers.longhorn.io
     operations:
     - {"op": "replace", "path": "/status"}
   - apiVersion: apiextensions.k8s.io/v1
     kind: CustomResourceDefinition
     name: replicas.longhorn.io
     operations:
     - {"op": "replace", "path": "/status"}
   - apiVersion: apiextensions.k8s.io/v1
     kind: CustomResourceDefinition
     name: settings.longhorn.io
     operations:
     - {"op": "replace", "path": "/status"}
----
 ** Parameters for specifying the version of the Helm chart to be installed

+
[subs="+attributes",yaml]
----
 helm:
   repo: https://charts.longhorn.io
   chart: longhorn
   version: v{patch-version} # Replace with the version you would like to install or upgrade to
   releaseName: longhorn
----
+
Example of a complete `fleet.yaml` file:
+
[subs="+attributes",yaml]
----
 defaultNamespace: longhorn-system
 helm:
   repo: https://charts.longhorn.io
   chart: longhorn
   version: v{patch-version}
   releaseName: longhorn
 diff:
   comparePatches:
   - apiVersion: apiextensions.k8s.io/v1
     kind: CustomResourceDefinition
     name: engineimages.longhorn.io
     operations:
     - {"op": "replace", "path": "/status"}
   - apiVersion: apiextensions.k8s.io/v1
     kind: CustomResourceDefinition
     name: nodes.longhorn.io
     operations:
     - {"op": "replace", "path": "/status"}
   - apiVersion: apiextensions.k8s.io/v1
     kind: CustomResourceDefinition
     name: volumes.longhorn.io
     operations:
     - {"op": "replace", "path": "/status"}
----
. Create a GitRepo custom resource (CR) that points to your GitOps repository.
+
[,bash]
----
 cat > longhorn-gitrepo.yaml << "EOF"
 apiVersion: fleet.cattle.io/v1alpha1
 kind: GitRepo
 metadata:
   name: longhorn
   namespace: fleet-local
 spec:
   repo: https://github.com/your-username/your-gitops-repo.git
   revision: main
   paths:
   - .
 EOF
----

. Apply the GitRepo CR.
+
[,bash]
----
 kubectl apply -f longhorn-gitrepo.yaml
----

. Verify that the GitRepo CR was created and synced successfully.
+
[,bash]
----
 kubectl -n fleet-local get gitrepo -w
----

. Verify that {longhorn-product-name} was installed successfully.
+
[,bash]
----
 kubectl -n longhorn-system get pod
----
+
Example of a successful installation:
+
[,bash]
----
 NAME                                                READY   STATUS    RESTARTS   AGE
 longhorn-ui-b7c844b49-w25g5                         1/1     Running   0          2m41s
 longhorn-manager-pzgsp                              1/1     Running   0          2m41s
 longhorn-driver-deployer-6bd59c9f76-lqczw           1/1     Running   0          2m41s
 longhorn-csi-plugin-mbwqz                           2/2     Running   0          100s
 csi-snapshotter-588457fcdf-22bqp                    1/1     Running   0          100s
 csi-snapshotter-588457fcdf-2wd6g                    1/1     Running   0          100s
 csi-provisioner-869bdc4b79-mzrwf                    1/1     Running   0          101s
 csi-provisioner-869bdc4b79-klgfm                    1/1     Running   0          101s
 csi-resizer-6d8cf5f99f-fd2ck                        1/1     Running   0          101s
 csi-provisioner-869bdc4b79-j46rx                    1/1     Running   0          101s
 csi-snapshotter-588457fcdf-bvjdt                    1/1     Running   0          100s
 csi-resizer-6d8cf5f99f-68cw7                        1/1     Running   0          101s
 csi-attacher-7bf4b7f996-df8v6                       1/1     Running   0          101s
 csi-attacher-7bf4b7f996-g9cwc                       1/1     Running   0          101s
 csi-attacher-7bf4b7f996-8l9sw                       1/1     Running   0          101s
 csi-resizer-6d8cf5f99f-smdjw                        1/1     Running   0          101s
 instance-manager-b34d5db1fe1e2d52bcfb308be3166cfc   1/1     Running   0          114s
 engine-image-ei-df38d2e5-cv6nc                      1/1     Running   0          114s
----

. xref:longhorn-system/system-access/create-ingress.adoc[Create an NGINX Ingress controller with basic authentication] to access the UI. Authentication to the UI is not enabled by default.
. xref:longhorn-system/system-access/system-access.adoc[Access the UI].
